--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ body.custom-background { background-color: #0091c2; background-image: url('wp-co
 </div>
 <div id="footer">
 <span class="text">
-Copyright &copy; 2009-2014 <a href="index.html">Dupon Luc</a> &middot; Pareinpark 73 &middot; 9120 Beveren &middot; GSM 0476/29.00.23 &middot; <a class="__cf_email__" href="cdn-cgi/l/email-protection.html" data-cfemail="355c5b535a755140455a5b5940561b5750">[email&nbsp;protected]</a><script type="text/javascript">
+Copyright &copy; 2009-2014 <a href="index.html">Dupon Luc</a> &middot; Pareinpark 73 &middot; 9120 Beveren &middot; GSM 0476/29.00.23 &middot; <a class="__cf_email__" href="cdn-cgi/l/email-protection.html" data-cfemail="355c5b535a755140455a5b5940561b5750">[email&nbsp;protected]</a> &middot; FOD.BIZ:20178606<script type="text/javascript">
 /* <![CDATA[ */
 (function(){try{var s,a,i,j,r,c,l,b=document.getElementsByTagName("script");l=b[b.length-1].previousSibling;a=l.getAttribute('data-cfemail');if(a){s='';r=parseInt(a.substr(0,2),16);for(j=2;a.length-j;j+=2){c=parseInt(a.substr(j,2),16)^r;s+=String.fromCharCode(c);}s=document.createTextNode(s);l.parentNode.replaceChild(s,l);}}catch(e){}})();
 /* ]]> */
