--- a/verwarming/contact.html
+++ b/verwarming/contact.html
@@ -124,7 +124,8 @@ http://www.duponluc.be  |  <a href="../cdn-cgi/l/email-protection.html#71181f171
 (function(){try{var s,a,i,j,r,c,l,b=document.getElementsByTagName("script");l=b[b.length-1].previousSibling;a=l.getAttribute('data-cfemail');if(a){s='';r=parseInt(a.substr(0,2),16);for(j=2;a.length-j;j+=2){c=parseInt(a.substr(j,2),16)^r;s+=String.fromCharCode(c);}s=document.createTextNode(s);l.parentNode.replaceChild(s,l);}}catch(e){}})();
 /* ]]> */
 </script></a><br />
-BTW NR 0684.323.815</p>
+BTW NR 0684.323.815<br />
+FOD.BIZ:20178606</p>	
 <div id="wufoo-z1n3ng0y0ds8ynj">
 Fill out my <a href="https://duponluc.wufoo.com/forms/z1n3ng0y0ds8ynj">online form</a>.
 </div>
@@ -164,7 +165,7 @@ Copyright &copy; 2009-2014 <a href="../index.html">Dupon Luc</a> &middot; Parein
 /* <![CDATA[ */
 (function(){try{var s,a,i,j,r,c,l,b=document.getElementsByTagName("script");l=b[b.length-1].previousSibling;a=l.getAttribute('data-cfemail');if(a){s='';r=parseInt(a.substr(0,2),16);for(j=2;a.length-j;j+=2){c=parseInt(a.substr(j,2),16)^r;s+=String.fromCharCode(c);}s=document.createTextNode(s);l.parentNode.replaceChild(s,l);}}catch(e){}})();
 /* ]]> */
-</script> <br /> <a href="../contact.1.html">Contact</a> &middot; <a href="../algemene-voorwaarden.html">Algemene Voorwaarden</a> &middot; <a href="../wp-login.php.html">Login</a><br /><br /> Powered by <a href="http://www.wordpress.org" title="WordPress" target="_blank">WordPress</a> &middot; Adapted from <a href="http://www.lightworddesign.com/" target="_blank" title="Lightword Theme">Lightword Theme</a> by Andrei Luca</em>
+</script> &middot; FOD.BIZ:20178606 <br /> <a href="../contact.1.html">Contact</a> &middot; <a href="../algemene-voorwaarden.html">Algemene Voorwaarden</a> &middot; <a href="../wp-login.php.html">Login</a><br /><br /> Powered by <a href="http://www.wordpress.org" title="WordPress" target="_blank">WordPress</a> &middot; Adapted from <a href="http://www.lightworddesign.com/" target="_blank" title="Lightword Theme">Lightword Theme</a> by Andrei Luca</em>
 <a title="Go to top" class="top" href="contact.html#top">Go to top &uarr;</a>
 </span>
 </div>
