--- a/alarm.html
+++ b/alarm.html
@@ -112,8 +112,9 @@ body.custom-background { background-color: #0091c2; background-image: url('wp-co
 </div>
 <div id="content"><div id="content-body">
 <div class="post-136 post type-post status-publish format-standard hentry category-diensten tag-alarm-camera-beveiliging" id="post-136">
-<h2><a title="Alarm &#038; Camera Beveiliging" href="alarm.html" rel="bookmark">Alarm &#038; Camera Beveiliging</a></h2>
-<div class="simple_date">Posted on August 25, 2010</div><p>Wij zijn een officieel erkende beveiligingsonderneming (FOD BIZ 20 178606) die alarmsystemen installeert en jaarlijks onderhoud. Daarnaast installeren wij ook systemen voor cameratoezicht, waarbij een bewakingscamera een gebouw, gebied of (groepen) mensen overziet.</p>
+<h2><a title="Alarm &#038; Camera Beveiliging" href="alarm.html" rel="bookmark"><p style="text-decoration: line-through;">Alarm &#038; Camera Beveiliging</p></a></h2>
+<div class="simple_date">Posted on August 25, 2010</div><p><b>Wij zijn tijdelijk gestopt met deze activiteit.</b></p>
+	<p>Wij zijn een officieel erkende beveiligingsonderneming (FOD BIZ 20 178606) die alarmsystemen installeert en jaarlijks onderhoud. Daarnaast installeren wij ook systemen voor cameratoezicht, waarbij een bewakingscamera een gebouw, gebied of (groepen) mensen overziet.</p>
 <p>Een alarmsysteem of alarminstallatie is een elektronisch systeem dat een alarm geeft bij gevaarlijke gebeurtenissen. Een gangbare term is inbraakalarm, doch de huidige alarmsystemen hebben meestal meerdere mogelijkheden, zoals het detecteren van brand, diefstal, bij een persoonlijk alarm, etc.</p>
 <p>De meeste systemen worden in of uitgeschakeld met behulp van een cijfercode wat wordt ingevoerd op een codebedienpaneel (klavier) aan de in- of uitgang. Er zijn ook nog andere, weliswaar minder gebruikte methoden, om de alarmsystemen te bedienen zoals met een sleutel, badge, vinger-, hand- of oogherkenning.</p>
 <p>Een alarmsysteem werkt met sensoren. Wanneer bijvoorbeeld een raam of deur geopend wordt waar een sensor op gemonteerd is, kan er een alarm afgaan. Ruimtelijk werkende detectoren detecteren een beweging in een ruimte.</p>
